--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    setps:
+    steps:
       - name: checkout repo
         uses: actions/checkout@v3
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version:'3.10'
+          python-version: '3.10'
       - name : Install Dependances
         run: |
           python -m pip install --upgrade pip
